--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "vows":">= 0.5.2"
   },
   "engines":{"node":">= 0.4.1"},
-  "scripts": { "test":"vows tests/*"}
+  "scripts": 
+   { "test":"vows tests/*",
+     "demo_1":"node demo-itunes.js",
+     "demo_2":"node demo-linkshare.js",
+     "demo_3":"node demo-album-art-server.js"
+   }
 }
